# TECFS-CE-2103

./: .gitignore  CMakeLists.txt  README.md
Controller_Node/: CMakeLists.txt  main.cpp
Controller_Node/src/Algorithms/: BinaryConverter.h  HuffmanCompression.h
Controller_Node/src/App_Controller/: App_Controller.h
Controller_Node/src/DiskNodes_Controller/: Disk_Controller.h  Sender.h
Controller_Node/src/Objects/: AppMessage.h  DiskMessage.h  Huffman_pair.h  TypeMessage.h
Controller_Node/src/Socket/: Server.cpp  Server.h
Controller_Node/src/UtilJSON/: JSON_Management.h
DataStructures/: SimplyList.h
Disk_Node/: CMakeLists.txt  main.cpp
html/: _app___controller_8h.html  _app___controller_8h_source.html  _app_message_8h.html  _app_message_8h_source.html  _binary_converter_8h.html  _binary_converter_8h_source.html  _block_8h.html  _block_8h_source.html  _book_8h.html  _book_8h_source.html  _c_make_rule_hashes_8txt.html  _controller___node_2_c_make_lists_8txt.html  _controller___node_2main_8cpp.html  _controller___node_2src_2_algorithms_2_huffman_compression_8h.html  _controller___node_2src_2_algorithms_2_huffman_compression_8h_source.html  _controller___node_2src_2_objects_2_huffman___message_8h.html  _controller___node_2src_2_objects_2_huffman___message_8h_source.html  _controller___node_2src_2_objects_2_huffman__pair_8h.html  _controller___node_2src_2_objects_2_huffman__pair_8h_source.html  _controller___node_2src_2_util_j_s_o_n_2_j_s_o_n___management_8h.html  _controller___node_2src_2_util_j_s_o_n_2_j_s_o_n___management_8h_source.html  (+589 more)
(+191 files in other folders)
